plugins {
    id 'java'
    id 'war'
}

group 'woojooin'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.2'
    springVersion = '5.3.37'
    lombokVersion = '1.18.32'
    flywayVersion = '7.15.0'
    javaxVersion = '3.0.0'
    redisVersion = '2.7.18'
    lettuceVersion = '6.1.10.RELEASE'
    openAiVersion = '2.19.2'
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

dependencies {
    // 스프링
    implementation("org.springframework:spring-context:${springVersion}")
            { exclude group: 'commons-logging', module: 'commons-logging' }
    implementation "org.springframework:spring-webmvc:${springVersion}"
    implementation 'javax.inject:javax.inject:1'

    // AOP
    runtimeOnly 'org.aspectj:aspectjrt:1.9.20'
    runtimeOnly 'org.aspectj:aspectjweaver:1.9.20'

    // JSP, SERVLET, JSTL
    implementation('javax.servlet:javax.servlet-api:4.0.1')
    compileOnly 'javax.servlet.jsp:jsp-api:2.1'
    implementation 'javax.servlet:jstl:1.2'

    // Logging
    implementation 'org.slf4j:slf4j-api:2.0.9'
    runtimeOnly 'org.slf4j:jcl-over-slf4j:2.0.9'
    runtimeOnly 'org.slf4j:slf4j-log4j12:2.0.9'
    implementation 'log4j:log4j:1.2.17'

    // xml내 한글 처리
    implementation 'xerces:xercesImpl:2.12.2'

    // Lombok
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    // Jackson - Json 처리
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.4'

    // 데이터베이스
    implementation 'com.mysql:mysql-connector-j:8.1.0'
    implementation 'com.zaxxer:HikariCP:2.7.4'

    // 로컬 캐시 (caffeine)
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

    implementation "org.springframework:spring-tx:${springVersion}"
    implementation "org.springframework:spring-jdbc:${springVersion}"

    implementation 'org.mybatis:mybatis:3.4.6'
    implementation 'org.mybatis:mybatis-spring:1.3.2'

    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4:1.16'
    implementation 'org.apache.logging.log4j:log4j-api:2.0.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.0.1'

    // 테스트
    testImplementation "org.springframework:spring-test:${springVersion}"
    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    //for security
    implementation 'org.springframework.security:spring-security-config:5.8.6'
    implementation 'org.springframework.security:spring-security-core:5.8.6'
    implementation 'org.springframework.security:spring-security-web:5.8.6'
    implementation 'org.springframework.security:spring-security-crypto:5.8.6'

    //Http components
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'

    //jackson
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.3'

    //Fly way
    implementation "org.flywaydb:flyway-core:${flywayVersion}"

    //Validator
    implementation 'javax.validation:validation-api:2.0.1.Final'
    implementation 'org.hibernate.validator:hibernate-validator:6.0.13.Final'
    implementation "org.glassfish:javax.el:${javaxVersion}"


    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")

    // Swagger 의존성
    implementation 'io.springfox:springfox-swagger2:2.9.2'
    implementation 'io.springfox:springfox-swagger-ui:2.9.2'

    // 레디스
    implementation "org.springframework.data:spring-data-redis:${redisVersion}"
    implementation "io.lettuce:lettuce-core:${lettuceVersion}"

    // OpenAI
    implementation("com.openai:openai-java:${openAiVersion}")
}

test {
    useJUnitPlatform()
}